--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,9 @@
   padding: 0px;
   box-sizing: border-box;
 }
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
